# react-native-quick-sqlite

./: .eslintrc.js  LICENSE  README.md  bun.lockb  package.json
.github/: dependabot.yml
.github/workflows/: build-android-release.yml  build-android.yml  build-ios.yml  lint-cpp.yml  lint-typescript.yml  update-lockfiles.yml
config/: .eslintrc.js
cpp/: JSIHelper.cpp  JSIHelper.h  bindings.cpp  sqlbatchexecutor.cpp  sqlbatchexecutor.h  sqliteBridge.cpp  sqliteBridge.h
example/: .eslintrc.js  Gemfile  app.json  babel.config.js  index.js  package.json  tsconfig.json
example/android/: build.gradle  gradle.properties
example/ios/NitroSQLiteExample.xcodeproj/: project.pbxproj
example/src/: App.tsx  Database.ts  initGlobals.ts  navigation.ts
example/src/model/: Book.ts  (+1 more)
package/: .eslintrc.js  RNNitroSQLite.podspec  RNQuickSQLite.podspec  nitro.json  package.json  react-native-quick-sqlite.podspec  tsconfig.build.json  tsconfig.json
package/android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
package/android/src/main/java/com/margelo/rnnitrosqlite/: DocPathSetter.kt  RNNitroSQLitePackage.kt
package/android/src/main/java/com/margelo/rnquicksqlite/: DocPathSetter.kt  RNQuickSQLitePackage.kt
package/android/src/newarch/com/margelo/rnnitrosqlite/: RNNitroSQLiteOnLoadModule.kt
package/android/src/newarch/com/margelo/rnquicksqlite/: RNQuickSQLiteOnLoadModule.kt
package/android/src/oldarch/com/margelo/rnnitrosqlite/: RNNitroSQLiteOnLoadModule.kt
package/android/src/oldarch/com/margelo/rnquicksqlite/: RNQuickSQLiteOnLoadModule.kt
package/cpp/: NitroSQLiteException.hpp  operations.cpp  sqliteExecuteBatch.cpp  types.hpp
package/src/: index.ts  typeORM.ts  types.ts
scripts/: release.sh
(+22 files in other folders)
